fix: implement suggested changes... part 2